# obs-dpdfnet

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  THIRD_PARTY.md
cmake/: FindONNXRuntime.cmake
data/locale/: en-US.ini
models/: manifest.json
scripts/: bootstrap-windows.ps1  build-windows-msvc.ps1  install-windows.ps1  publish-release-wsl.sh  release-windows.ps1  update-windows.ps1
src/: dpdfnet-filter.cpp  dpdfnet-model.cpp  dpdfnet-model.hpp  plugin-main.cpp  stft.cpp  stft.hpp
tools/: model-smoke.cpp  stream-dump.cpp
